Add list view blog items
Signed-off-by: Md Mohin Uddin <mohin@appscode.com>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -371,6 +371,11 @@
     <i class="fa fa-angle-up" aria-hidden="true"></i>
   </button>
   <!-- go-to-top end -->
+  
+
+  <!-- vuejs cdn  -->
+  <script src="https://unpkg.com/vue@next"></script>
+  <script src="/assets/js/vueapp.js"></script>
 
   <!-- AOS js  -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
