--- a/static/assets/sass/layouts/_blog-page.scss
+++ b/static/assets/sass/layouts/_blog-page.scss
@@ -97,9 +97,6 @@ a.inline-button {
   }
 
   .date {
-    .fa {
-    }
-
     strong {
       font-weight: 500;
       font-size: 16px;
@@ -251,10 +248,6 @@ ul.social-share-button {
         &.is-active {
           background-color: $ac-primary;
           color: $ac-white;
-          .fa {
-          }
-        }
-        .fa {
         }
       }
     }
@@ -281,8 +274,6 @@ ul.social-share-button {
         margin-bottom: 15px;
         cursor: pointer;
         padding: 0;
-        .fa {
-        }
       }
 
       .ac-single-checkbox {
@@ -339,18 +330,12 @@ ul.social-share-button {
 
     flex-wrap: wrap;
     .author {
-      .fa {
-      }
-
       a {
         font-size: 14px;
       }
     }
 
     .date {
-      .fa {
-      }
-
       strong {
         font-size: 14px;
       }
@@ -374,9 +359,38 @@ ul.social-share-button {
     line-height: 160%;
     margin-bottom: 15px;
   }
+}
 
-  .inline-button {
-    .fa {
+.blog-items {
+  .blog-title-content {
+    padding-left: 20px;
+    &:hover {
+      h2 {
+        a {
+          color: $ac-primary;
+        }
+      }
+      a.inline-button {
+        &:after {
+          width: 100%;
+        }
+      }
+    }
+    .meta {
+      margin-bottom: 10px;
+    }
+    h2 {
+      font-weight: 700;
+      font-size: 24px;
+      line-height: 130%;
+      letter-spacing: -1px;
+      margin-bottom: 15px;
+      a {
+        color: $ac-color-heading;
+      }
+    }
+    p {
+      margin-bottom: 20px;
     }
   }
 }
@@ -480,15 +494,6 @@ ul.social-share-button {
       }
     }
   }
-}
-.blog-bg-1 {
-  background-image: url(/assets/images/slider-image/s-1.png);
-}
-.blog-bg-2 {
-  background-image: url(/assets/images/slider-image/s-2.png);
-}
-.blog-bg-3 {
-  background-image: url(/assets/images/slider-image/s-3.png);
 }
 
 //blog body start
@@ -612,106 +617,6 @@ ul.social-share-button {
   }
 }
 
-// single blog start
-// .single-blog-item {
-//   overflow: hidden;
-//   transition: 0.3s ease-in-out;
-
-//   &:hover {
-//     border-radius: 0 0 4px 4px;
-//     box-shadow: 0 2px 3px rgba(15, 80, 100, 0.16);
-//     .blog-image {
-//       transform: scale(1.3);
-//     }
-
-//     .blog-description {
-//       h2 {
-//         a {
-//           color: $ac-primary !important;
-//         }
-//       }
-//     }
-//   }
-
-  // .blog-image-wrapper {
-  //   border-radius: 4px 4px 0 0;
-  //   overflow: hidden;
-
-  //   .blog-image {
-  //     background-size: cover;
-  //     background-position: center;
-  //     background-color: #ddd;
-  //     background-repeat: no-repeat;
-  //     height: 234px;
-  //     display: block;
-  //   }
-  // }
-
-  // .single-blog-content {
-  //   padding: 20px 20px;
-  //   border: 1px solid #eaebf5;
-  //   border-radius: 0 0 4px 4px;
-  //   border-top: transparent;
-  //   overflow: hidden;
-  //   min-height: 250px;
-
-  //   .blog-meta {
-  //     display: flex;
-  //     justify-content: space-between;
-  //     font-size: 14px;
-  //     margin-bottom: 10px;
-
-  //     .meta-date {
-  //       i {
-  //         color: $ac-primary;
-  //         padding-right: 5px;
-  //       }
-  //     }
-
-  //     .meta-author {
-  //       a {
-  //         font-weight: 500;
-  //         text-align: right;
-  //         span {
-  //           color: $ac-color-text;
-  //           font-weight: 400;
-  //         }
-  //       }
-  //     }
-  //   }
-
-  //   .blog-description {
-  //     overflow: hidden;
-
-  //     h2 {
-  //       a {
-  //         font-size: 16px;
-  //         line-height: 26px;
-  //         font-weight: 700;
-  //         display: block;
-  //         margin-bottom: 10px;
-  //         color: $ac-color-heading;
-  //       }
-  //     }
-
-  //     p {
-  //       margin-bottom: 10px;
-  //       overflow: hidden;
-  //       text-overflow: ellipsis;
-  //       display: -webkit-box;
-  //       line-clamp: 3;
-  //       -webkit-line-clamp: 3;
-  //       box-orient: vertical;
-  //       -webkit-box-orient: vertical;
-  //     }
-
-  //     .inline-button {
-  //       float: right;
-  //     }
-  //   }
-  // }
-// }
-
 /*=================================================================================================
                                     Responsive code start
 =================================================================================================*/
@@ -732,122 +637,18 @@ ul.social-share-button {
                   Desktop Between 1024px and 1215px
 **************************************************************** */
 @media (min-width: 1024px) and (max-width: 1215px) {
-  .blog-hero-area {
-    .blog-slider-wrapper {
-      .social-media-share {
-        padding: 30px 15px;
-      }
-    }
-  }
 }
 
 /**************************************************************** 
                   Tablet Between 769px and 1023px
 **************************************************************** */
 @media (min-width: 769px) and (max-width: 1023px) {
-  .blog-hero-area {
-    &.section-padding {
-      padding-top: 160px;
-      padding-bottom: 0;
-    }
-    .blog-slider-wrapper {
-      .blog-slider-inner {
-        .single-blog {
-          .blog-content-wrapper {
-            .blog-content-inner {
-              padding-right: 50px;
-              h1 {
-                font-size: 36px;
-                line-height: 50px;
-              }
-            }
-          }
-        }
-      }
-    }
-  }
-  .blog-hero-area {
-    .blog-slider-wrapper {
-      .social-media-share {
-        border: none;
-      }
-    }
-  }
-  .blog-hero-area {
-    .blog-slider-wrapper {
-      .social-media-share {
-        width: auto;
-        padding: 0;
-      }
-    }
-  }
-  .search-bar {
-    input[type="search"] {
-      height: 50px;
-    }
-    button {
-      font-size: 18px;
-    }
-  }
 }
 
 /**************************************************************** 
                     Mobile Up to 768px. 
 **************************************************************** */
 @media only screen and (min-width: 100px) and (max-width: 768px) {
-  .blog-hero-area {
-    &.section-padding {
-      padding-top: 160px;
-      padding-bottom: 0;
-    }
-    .blog-slider-wrapper {
-      .blog-slider-inner {
-        .slider-button {
-          right: 0;
-        }
-        .single-blog {
-          .blog-content-wrapper {
-            .blog-content-inner {
-              padding-right: 80px;
-              h1 {
-                font-size: 30px;
-                line-height: 48px;
-              }
-            }
-          }
-          .blog-slider-image {
-            max-width: 100%;
-            height: 270px;
-          }
-        }
-      }
-    }
-  }
-  .blog-hero-area {
-    .blog-slider-wrapper {
-      .social-media-share {
-        border: none;
-      }
-    }
-  }
-  .blog-hero-area {
-    .blog-slider-wrapper {
-      .social-media-share {
-        width: auto;
-        padding: 0;
-        top: 0;
-        margin-top: 0;
-      }
-    }
-  }
-  .search-bar {
-    input[type="search"] {
-      height: 50px;
-    }
-    button {
-      font-size: 18px;
-    }
-  }
 }
 
 /*=================================================================================================
