--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -372,11 +372,6 @@
   </button>
   <!-- go-to-top end -->
   
-
-  <!-- vuejs cdn  -->
-  <script src="https://unpkg.com/vue@next"></script>
-  <script src="/assets/js/vueapp.js"></script>
-
   <!-- AOS js  -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <!-- download js  -->
@@ -385,6 +380,8 @@
   <script src="https://unpkg.com/clipboard@2/dist/clipboard.min.js"></script>
   <!-- Main JS -->
   <script src="/assets/js/main.js"></script>
+  <!--Search  -->
+  <script src="/assets/js/search.js"></script>
 
   <!--Start of Tawk.to Script-->
   <script type="text/javascript">
