--- a/static/assets/sass/main.css
+++ b/static/assets/sass/main.css
@@ -10732,6 +10732,10 @@ Responsive Classes
   display: flex;
 }
 
+.hero-area-blog .single-blog-carousel .blog-title-content {
+  padding-left: 40px;
+}
+
 .hero-area-blog .blog-banner {
   background-image: url(/assets/images/bg-image/pattern-bg.png);
 }
@@ -10793,6 +10797,18 @@ button.slide {
       -ms-flex-pack: center;
           justify-content: center;
   cursor: pointer;
+}
+
+.hero-area-thumbnail {
+  position: relative;
+  z-index: 1;
+}
+
+.hero-area-thumbnail .slider-button {
+  position: absolute;
+  right: -40px;
+  top: 50%;
+  margin-top: -40px;
 }
 
 button.slide img {
@@ -11231,119 +11247,6 @@ ul.social-share-button li a i.fa {
 
 .blog-items .blog-title-content p {
   margin-bottom: 20px;
-}
-
-.blog-hero-area.section-padding {
-  padding: 160px 0 100px;
-}
-
-.blog-hero-area .blog-slider-wrapper {
-  position: relative;
-  z-index: 1;
-  overflow: hidden;
-}
-
-.blog-hero-area .blog-slider-wrapper .social-media-share {
-  border: 10px solid var(--ac-primary);
-  width: 240px;
-  padding: 30px;
-  text-align: right;
-  position: absolute;
-  top: 50%;
-  margin-top: -170px;
-  right: 0;
-  z-index: 9;
-}
-
-.blog-hero-area .blog-slider-wrapper .blog-slider-inner {
-  overflow: hidden;
-  position: relative;
-  z-index: 1;
-}
-
-.blog-hero-area .blog-slider-wrapper .blog-slider-inner .slider-button {
-  position: absolute;
-  right: 42.6%;
-  bottom: 0px;
-  z-index: 2;
-}
-
-.blog-hero-area .blog-slider-wrapper .blog-slider-inner .slider-button .slide {
-  background: #fff;
-  border: 1px solid transparent;
-  width: 88px;
-  height: 80px;
-  font-size: 30px;
-  cursor: pointer;
-  display: block;
-}
-
-.blog-hero-area .blog-slider-wrapper .blog-slider-inner .slider-button .slide img {
-  -webkit-animation: arrowAnimate 2s infinite;
-          animation: arrowAnimate 2s infinite;
-}
-
-.blog-hero-area .blog-slider-wrapper .blog-slider-inner .slider-button .slide:hover img {
-  -webkit-animation-play-state: paused;
-          animation-play-state: paused;
-}
-
-.blog-hero-area .blog-slider-wrapper .blog-slider-inner .single-blog {
-  opacity: 0;
-  visibility: hidden;
-  -webkit-transition: 0.3s ease-in-out;
-  transition: 0.3s ease-in-out;
-  display: none;
-  overflow: hidden;
-  position: relative;
-  z-index: 1;
-}
-
-.blog-hero-area .blog-slider-wrapper .blog-slider-inner .single-blog.show {
-  opacity: 1;
-  visibility: visible;
-  display: block;
-}
-
-.blog-hero-area .blog-slider-wrapper .blog-slider-inner .single-blog .blog-content-wrapper .blog-content-inner {
-  padding-right: 50px;
-}
-
-.blog-hero-area .blog-slider-wrapper .blog-slider-inner .single-blog .blog-content-wrapper .blog-content-inner .meta-date {
-  margin-bottom: 6px;
-}
-
-.blog-hero-area .blog-slider-wrapper .blog-slider-inner .single-blog .blog-content-wrapper .blog-content-inner h1 {
-  display: block;
-  font-size: 36px;
-  line-height: 44px;
-  margin-bottom: 7px;
-}
-
-.blog-hero-area .blog-slider-wrapper .blog-slider-inner .single-blog .blog-content-wrapper .blog-content-inner .description {
-  line-height: 26px;
-  margin-bottom: 20px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  line-clamp: 6;
-  -webkit-line-clamp: 6;
-  box-orient: vertical;
-  -webkit-box-orient: vertical;
-}
-
-.blog-hero-area .blog-slider-wrapper .blog-slider-inner .single-blog .blog-slider-image {
-  max-width: 82%;
-  height: 620px;
-  background-size: cover;
-  background-position: center;
-  display: block;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  overflow: hidden;
-  background-color: #333;
 }
 
 .blog-left-sidebar {
